--- a/WeightedDictionary.csproj
+++ b/WeightedDictionary.csproj
@@ -166,6 +166,9 @@
   <ItemGroup>
     <None Include="Dictionaries\WWBP-empathy_lexicon.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dictionaries\eMFD.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y  "$(TargetPath)" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\"</PostBuildEvent>
