adding new dictionary

--- a/WeightedDictionary.csproj
+++ b/WeightedDictionary.csproj
@@ -169,6 +169,9 @@
   <ItemGroup>
     <None Include="Dictionaries\eMFD.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Dictionaries\Weigand et al. %282018%29 - Abuse Lexicon.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y  "$(TargetPath)" "$(SolutionDir)BUTTER_Client\$(OutDir)\Plugins\"</PostBuildEvent>
